postcss/tests/testData/inspections/customMedia/emptyCustomMedia.pcss
@custom-media<error descr="Identifier expected"> </error>;
@custom-media --my<EOLError descr="';' expected"></EOLError>
@custom-media<EOLError descr="Identifier expected"></EOLError><EOLError descr="';' expected"></EOLError>